# 6-DOF-Robotic-Arm

./: Components.md  Dockerfile  README.md
Arduino_codes/: stepper_motor_final.ino
Cad_files/: NEMA_17.SLDPRT  Part7.SLDPRT  Part9.SLDPRT  Robotic_Arm_final.SLDASM  Servo SG90.SLDPRT  [4145] TowerPro SG90 Mini Servo-SunRobotics_in-Pt4.SLDPRT  arm.SLDPRT  base_bottom.SLDPRT  basetop.SLDPRT  blue_servo_mod_teeth.SLDPRT  bottomstud.SLDPRT  elbow.SLDPRT  elbow_extn_final.SLDPRT  elbow_plug.SLDPRT  final_shoulder.SLDPRT  gripper.SLDPRT  instrument ball bearing_68_am.sldprt  large_gear.SLDPRT  mg995.SLDPRT  mg995.stp  nut.SLDPRT  pinpin.SLDPRT  plug.SLDPRT  screw.SLDPRT  shoulder_mock1.SLDPRT  small_gear.SLDPRT  wrist _rotation_lid.SLDPRT  wristholder.SLDPRT  ~$Robotic_Arm_final.SLDASM
servo_codes/: elbow_servo.py  wrist_servos.py
src/final_arm_urdf/: package.xml  setup.cfg  setup.py
src/final_arm_urdf/launch/: launch.py
src/final_arm_urdf/meshes/visual/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL
src/final_arm_urdf/urdf/: final_arm_urdf.xacro
src/joint_state_publisher_gui_custom/: package.xml  setup.cfg  setup.py
src/joint_state_publisher_gui_custom/joint_state_publisher_gui_custom/: joint_state_publisher_gui.py
src/raspi/: package.xml  setup.cfg  setup.py
src/raspi/launch/: motor_launch.py
src/raspi/raspi/: elbow_servo.py  stepper.py  wrist_pitch.py  wrist_roll.py  wrist_yaw.py
