<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>final_arm_urdf</name>
  <version>0.1.0</version>
  <description>TODO: Package description</description>
  <maintainer email="aavishkar.tl@gmail.com">avishkar</maintainer>
  <license>TODO: License declaration</license>


  <depend>urdf</depend>
  <build_depend>launch_ros</build_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui_custom</exec_depend>
  <exec_depend>Universal_Robots_ROS2_Description</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
